1.0.1 validation / documentation